--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -4,7 +4,7 @@
 <html lang="pt-BR">
 
 <head>
-    <title>{% block title %} Home |{% endblock title %} Recipes</title>
+    <title>{% block title %} {% endblock title %} Recipes</title>
 </head>
 
 <body>
